# ASP3_STM32N6570-DK

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  What-did.txt  a.sh  memo.md
arch/arm_m_gcc/common/: Makefile.core  arm_m.h  core_kernel_impl.c  core_support.S  core_timer.c  tRawSpinLock.cdl
arch/arm_m_gcc/stm32n6xx_stm32cube/: MANIFEST  Makefile.chip  chip_kernel.h  chip_kernel_impl.h  chip_sil.h  chip_stddef.h  chip_syssvc.h  tUsart.c
build_cmake_n657/: CMakeCache.txt
cfg/: pass1.rb
cmake/: Asp3Cfg.cmake  Asp3Kernel.cmake  Asp3Tecs.cmake  DesignDecisions.txt  toolchain-arm-none-eabi.cmake
cmake/targets/: stm32n6570_dk.cmake
obj_h747_cm4/: sample1-new.cde  sample1.cde
obj_h747_cm7/: kernel_cfg.c  main_no_sprintf.c  objects-me.list  objects-me2.list  sample1.cde
obj_n657/: Makefile  kernel_cfg.c  kernel_cfg.h  start.s
sample/: Makefile  sample1_n657.c  sample1_n657.cdl  sample1_n657.cfg  sample1_n657.h
syssvc/: tBannerMain.c  tLogTaskMain.c  tSysLog.c  tSysLog.cdl
tecsgen/: MANIFEST_tecsgen_body
tecsgen/tecs/DataPumpHolder/: DataPumpHolder.cdl  tPumpMainConverter_inline.h
tecsgen/tecs/TECSInfo/: DescriptoInfo.idea
tecsgen/tecs/rpc/: memo.txt  socket.cdl  tSTDIOChannel.cdl  tinet.cdl
tecsgen/tecslib/: version.rb
tecsgen/tecslib/core/: C_parser.tab.rb  C_parser.y.rb  generate.rb  tecsgen.rb
tecsgen/tecslib/core/componentobj/: cell.rb  celltype.rb  celltypeModule.rb  classtype.rb  compositecelltype.rb  compositecelltypejoin.rb  domaintype.rb  factory.rb  generate.rb  import.rb  import_c.rb  importable.rb  join.rb  namespace.rb  namespacepath.rb  port.rb  region.rb  reversejoin.rb  signature.rb
tecsgen/tecslib/plugin/: CIfGenCelltypePlugin.rb  CIfGenPlugin.rb  ClassSwitchSignature.rb  CppIfGenCelltypePlugin.rb  CppIfGenPlugin.rb  DataPumpHolderPlugin.rb  MultiPlugin.rb  RPCPlugin.rb  TransparentMarshalerPlugin.rb  TransparentRPCSignaturePlugin.rb
tecsgen/tecslib/plugin/lib/: CellPluginizer.rb  GenTransparentMarshaler.rb
